[package]
name = "blindsight"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2021"
description = "Red teaming tool to dump LSASS memory, bypassing common countermeasures."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/blindsight"
license = "MIT"
keywords = ["windows", "minidump", "mimikatz", "redteaming", "exploitation"]
categories = ["command-line-utilities"]

[dependencies]
sysinfo = "0.30.13"
rand = "0.8.4"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Memory",
]

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = "z"
lto = true
# codegen-units = 1
panic = "abort"
